forth/test/fail/test_unused_local.af
\ Must fail to compile.
fun: test_unused_local_fail { val } end
